[package]
name = "ppar"
version = "0.2.0"
authors = ["prataprc <prataprc@gmail.com>"]
edition = "2018"
description = "Persistent immutable array"
license = "MIT"
repository = "https://github.com/bnclabs/ppar"
readme = "./README.md"
categories = ["data-structures"]
keywords = ["immutable", "persistent", "rope", "array", "concurrent"]

[lib]
path = "./src/lib.rs"

[[bin]]
name = "perf"
required-features = ["perf"]

[[bin]]
name = "fuzzy"
required-features = ["fuzzing"]

[dependencies]
arbitrary = { version = "0.4.7", features = ["derive"] }

structopt = { version = "0.3.20", default-features = false, optional = true }
rand = { version = "0.7.3", features = ["small_rng"], optional = true}
im = { version = "15.0.0", optional = true }
im-rc = { version = "15.0.0", optional = true }

[dev-dependencies]
rand = { version = "0.7.3", features = ["small_rng"]}

[features]
perf = ["structopt", "rand", "im", "im-rc"]
fuzzing = ["structopt", "rand"]
