[package]
name = "ppar"
version = "0.3.0"
description = "Persistent immutable array"
repository = "https://github.com/bnclabs/ppar"
documentation = "https://docs.rs/ppar"
keywords = ["immutable", "persistent", "rope", "array", "concurrent"]
categories = ["data-structures"]
authors = ["prataprc <prataprc@gmail.com>"]
license = "MIT"
edition = "2018"
readme = "./README.md"

[profile.release]
debug = true

[profile.bench]
debug = true

[[bin]]
name = "perf"
required-features = ["perf"]

[dependencies]
arbitrary = { version = "0.4.7", features = ["derive"] }

structopt = { version = "0.3.20", default-features = false, optional = true }
rand = { version = "0.7.3", features = ["small_rng"], optional = true}
im = { version = "15.0.0", optional = true }
im-rc = { version = "15.0.0", optional = true }

[dev-dependencies]
rand = { version = "0.7.3", features = ["small_rng"]}

[features]
perf = ["structopt", "rand", "im", "im-rc"]
